# technical-assessment-shift-scheduling-rust

./: .dockerignore  .gitignore  Cargo.toml  Data-Service.postman_collection.json  Makefile  README.md  Scheduling-Service.postman_collection.json  docker-compose.yml  init-db.sql
data-service/: Cargo.toml  Dockerfile
data-service/config/: default.toml
data-service/migrations/: 20250205000001_create_staff_status_enum.sql  20250205000002_create_staff_table.sql  20250205000003_create_staff_groups_table.sql  20250205000004_create_group_memberships_table.sql
data-service/src/: lib.rs  main.rs
data-service/src/api/: state.rs
data-service/src/api/handlers/: batch_handlers.rs  group_handlers.rs  membership_handlers.rs  mod.rs  staff_handlers.rs
data-service/src/api/requests/: group_request.rs  membership_request.rs  mod.rs  staff_request.rs
data-service/src/api/routes/: mod.rs
data-service/src/domain/entities/: group.rs  membership.rs  mod.rs  staff.rs
data-service/src/domain/repositories/: group_repository.rs  membership_repository.rs  mod.rs  staff_repository.rs
data-service/src/domain/services/: group_service.rs  mod.rs
data-service/src/infrastructure/: mod.rs
data-service/src/infrastructure/config/: mod.rs
data-service/src/infrastructure/database/: mod.rs
data-service/src/infrastructure/redis/: mod.rs
data-service/src/infrastructure/repositories/: mod.rs  postgres_group_repository.rs  postgres_membership_repository.rs  postgres_staff_repository.rs
data-service/src/presentation/: group.rs  group_dto.rs  membership.rs  membership_dto.rs  mod.rs  staff.rs  staff_dto.rs
data-service/tests/: group_api_tests.rs  integration_tests.rs  membership_api_tests.rs  staff_api_tests.rs
data-service/tests/common/: mod.rs
sample-data/: groups.json  memberships.json  staff.json
scheduling-service/: Cargo.toml  Dockerfile
scheduling-service/config/: default.toml
scheduling-service/migrations/: 20250205000001_create_enums.sql  20250205000002_create_schedule_jobs_table.sql  20250205000003_create_shift_assignments_table.sql  20250207000001_add_missing_indexes.sql
scheduling-service/src/: lib.rs  main.rs
scheduling-service/src/api/: mod.rs  state.rs
scheduling-service/src/api/handlers/: mod.rs  schedule_handlers.rs
scheduling-service/src/api/requests/: mod.rs  schedule_request.rs
scheduling-service/src/api/routes/: mod.rs
scheduling-service/src/domain/: mod.rs  schedule_generator.rs
scheduling-service/src/domain/entities/: mod.rs  schedule_job.rs  shift_assignment.rs
scheduling-service/src/domain/repositories/: mod.rs  schedule_job_repository.rs  shift_assignment_repository.rs
scheduling-service/src/domain/rules/: max_days_off_rule.rs  min_days_off_rule.rs  mod.rs  no_morning_after_evening_rule.rs  shift_balance_rule.rs
scheduling-service/src/domain/services/: mod.rs  scheduler.rs  scheduling_rules.rs
scheduling-service/src/domain/services_old/: mod.rs  schedule_processor.rs  scheduler.rs  scheduling_rules.rs
scheduling-service/src/infrastructure/: http_client.rs  job_processor.rs  mod.rs  redis.rs  scheduler.rs
scheduling-service/src/infrastructure/config/: mod.rs
scheduling-service/src/infrastructure/http_client/: mod.rs
scheduling-service/src/infrastructure/repositories/: mod.rs  postgres_schedule_job_repository.rs  postgres_shift_assignment_repository.rs
scheduling-service/src/presentation/: mod.rs  request.rs  schedule_serializer.rs
scheduling-service/tests/: integration_tests.rs  schedule_api_tests.rs
scheduling-service/tests/common/: mod.rs
shared/: Cargo.toml
shared/src/: cache.rs  error.rs  lib.rs  pagination.rs  response.rs  types.rs
