[workspace]
members = [
    "data-service",
    "scheduling-service",
    "shared",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Shift Scheduler Team"]

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }

axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

utoipa = { version = "5.2", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8.1", features = ["axum"] }

config = "0.14"

uuid = { version = "1.11", features = ["serde", "v4"] }

chrono = { version = "0.4", features = ["serde"] }

reqwest = { version = "0.12", features = ["json"] }

anyhow = "1.0"
thiserror = "2.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

mockall = "0.13"

async-trait = "0.1"
