[package]
name = "scheduling-service"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Shared crate
shared = { path = "../shared" }

# Async trait support
async-trait = "0.1"

# Redis for caching
redis = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
axum-test = "16"
hyper = { version = "1.4", features = ["full"] }
http-body-util = "0.1"
wiremock = "0.6"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
