[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
